Moved around some stuff and tweaked style

--- a/src/main/resources/eu/kohutek/openpinsfx/style.css
+++ b/src/main/resources/eu/kohutek/openpinsfx/style.css
@@ -1,5 +1,5 @@
 .background {
-    -fx-background-color: lightgray;
+    -fx-background-color: eggshellw;
 
 }
 
@@ -14,13 +14,12 @@
 }
 .game-chooser-button {
     -fx-min-width: 400px;
-    -fx-font-size: 48px;
-    -fx-font-family: Helvetica;
+    -fx-font-size: 36px;
+    -fx-font-family: "Helvetica Neue";
     -fx-font-weight: bolder;
     -fx-padding: 30;
     -fx-text-fill: white;
     -fx-background-color: #555555;
     -fx-border-color: black;
     -fx-border-width: 10;
-
 }
