--- a/src/main/resources/eu/kohutek/openpinsfx/main-view.fxml
+++ b/src/main/resources/eu/kohutek/openpinsfx/main-view.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.text.Text?>
 <HBox fx:id="mainBox" alignment="CENTER_LEFT" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="eu.kohutek.openpinsfx.gui.MainWindow">
     <padding>
@@ -48,10 +49,23 @@
             </VBox>
 
         </VBox>
-        <ChoiceBox fx:id="serialPortChoiceBox">
-        </ChoiceBox>
 
-        <ImageView fx:id="imageView" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
-        </ImageView>
+        <VBox spacing="40">
+            <padding>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="120.0"/>
+            </padding>
+
+            <VBox>
+                <padding>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                </padding>
+                <Label styleClass="game-chooser-label">Komunikačný port</Label>
+                <ChoiceBox styleClass="serial-port-choicebox" fx:id="serialPortChoiceBox">
+                </ChoiceBox>
+            </VBox>
+            <ImageView fx:id="imageView" fitWidth="420.0" pickOnBounds="true" preserveRatio="true">
+            </ImageView>
+        </VBox>
+
     </children>
 </HBox>
