--- a/src/main/resources/eu/kohutek/openpinsfx/game-view.fxml
+++ b/src/main/resources/eu/kohutek/openpinsfx/game-view.fxml
@@ -10,9 +10,10 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.HBox?>
 <BorderPane fx:id="mainPane" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.kohutek.openpinsfx.gui.GameWindow">
    <left>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" spacing="20.0">
           <padding>
               <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
           </padding>
@@ -48,4 +49,29 @@
         </rowConstraints>
       </GridPane>
    </center>
+    <bottom>
+        <HBox spacing="20.0">
+            <padding>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+            </padding>
+            <VBox>
+                <Label styleClass="score-panel-label">Počet hodov</Label>
+                <Label fx:id="throwsPanel" styleClass="score-panel-value">000</Label>
+
+            </VBox>
+            <VBox>
+                <Label styleClass="score-panel-label">Zhodené kolky</Label>
+                <Label fx:id="pinPanel" styleClass="score-panel-value">000</Label>
+
+
+            </VBox>
+            <VBox>
+                <Label styleClass="score-panel-label">Skóre</Label>
+                <Label fx:id="scorePanel" styleClass="score-panel-value">000</Label>
+
+
+            </VBox>
+
+        </HBox>
+    </bottom>
 </BorderPane>
